src/objects/Event__c.object
<CustomObject>
    <description>Usually a promoted show or activity coordinated by LNE but also may represent holds, rentals, bookings at third party venues, and festivals</description>
    <fields>
        <fullName>AcknowledgeFlags__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that promoter has reviewed the flags or does not have any flags to acknowledge</description>
        <label>Acknowledge Flags</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcknowledgementFlags__c</fullName>
        <description>Centrally records all the acknowledgement flags raised for the Event</description>
        <label>Acknowledgement Flags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ActualDropCount__c</fullName>
        <label>Actual Drop Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AdjustedGrossPotential__c</fullName>
        <label>Adjusted Gross Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdvertisingBudget__c</fullName>
        <label>Advertising Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdvertisingSettlementPlan__c</fullName>
        <label>Advertising Settlement Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Settle at Actual</fullName>
                </value>
                <value>
                    <fullName>Settle at Offer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AncillariesPerFan__c</fullName>
        <label>Ancillaries Per Fan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AppetizeEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appetize Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApprovalFlags__c</fullName>
        <description>Centrally records all the approval flags currently raised for the Event</description>
        <label>Approval Flags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ArtistCostsPotential__c</fullName>
        <label>Artist Costs Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ArtistSettlementComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Artist Settlement Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ArtistSettlementCompletedBy__c</fullName>
        <label>Artist Settlement Completed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Artists__c</fullName>
        <label>Artist(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AutoMatchedTour__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used with the LNE_EventAutoMatchTour_Batch class.</description>
        <label>Auto-Matched Tour</label>
        <referenceTo>Tour__c</referenceTo>
        <relationshipLabel>Events (Auto-Matched Tour)</relationshipLabel>
        <relationshipName>AutoMatchedEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BPCIntegrationStatus__c</fullName>
        <label>BPC Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Integrated</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BatchFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to track records that were processed by the batch apex class.</description>
        <label>BatchFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BookingHouseNut__c</fullName>
        <label>Booking House Nut</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BoxOfficeImportComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Box Office Import Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BoxOfficeImportCompletedBy__c</fullName>
        <label>Box Office Import Completed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnitFormula__c</fullName>
        <formula>Office__r.BusinessUnit__c</formula>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BuyingGroup__c</fullName>
        <label>Buying Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BuyingGroup</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CatereaseEvent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caterease Event</label>
        <referenceTo>CatereaseEventStaging__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>CatereaseEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CatereaseId__c</fullName>
        <externalId>true</externalId>
        <label>Caterease ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CatereaseProcessDate__c</fullName>
        <formula>CatereaseEvent__r.processdate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Caterease Process Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CloningInProcess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Background flag while cloning to suppress some validation rules and other exceptions that may occur.</description>
        <label>Cloning in Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrencyDate__c</fullName>
        <label>Currency Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrencyExchange__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Exchange</label>
        <referenceTo>CurrencyExchange__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Out__c</fullName>
        <description>Calculates the number of days between Today and the Event Last Date</description>
        <formula>EventLastDate__c - Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DidtheShowGointoPercentage__c</fullName>
        <label>Did the Show Go into Percentage?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DivisionFormula__c</fullName>
        <formula>Office__r.Division__c</formula>
        <label>Division Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Drives sharing rules to provide read-only access to other division members</description>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DoNotAutoAssociateWithTour__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true the first time an Event is associated with a Tour. It excludes this record from the automated daily process associating Events with Tours by search criteria.</description>
        <label>Do Not Auto Associate with Tour</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DropCountAdjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Drop Count Adjustment</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The event has been submitted through the approval process and either been reviewed and approved or auto-approved.</inlineHelpText>
        <label>Event Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventCancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventFirstDate__c</fullName>
        <label>Event First Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventLastDate__c</fullName>
        <label>Event Last Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventName__c</fullName>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventRecapComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Recap Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventRecapCompletedBy__c</fullName>
        <label>Event Recap Completed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventStartTimeEntered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Start Time Entered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventTitle__c</fullName>
        <formula>Name &amp; &quot; - &quot; &amp; EventName__c</formula>
        <label>Event Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExcludeFromBPCUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, excluded these records from updating BPC for forecast and metrics</description>
        <label>Exclude From BPC Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExcludeVenuefromBPCUpdates__c</fullName>
        <formula>Venue__r.ExcludeVenuefromBPCUpdates__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exclude Venue from BPC Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExcludeVenuefromOracleUpdates__c</fullName>
        <formula>Venue__r.ExcludeVenuefromOracleUpdates__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exclude Venue from Oracle Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExcludefromOracleFinancialUpdates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Oracle Financial Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinanceApprover1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FinanceApprover1ForEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinanceApprover2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FinanceApprover2ForEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinanceApprover3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FinanceApprover3ForEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FirstLevelApprovalAmountText__c</fullName>
        <formula>IF(!ISBLANK(Venue__r.Approver1__c) || !ISBLANK(Venue__r.Approver2__c),
  &quot;Venue-based approval&quot;,
  IF(FirstLevelApprovalAmount__c &gt; 0,
    &quot;Guarantee greater than &quot; &amp; TEXT(FirstLevelApprovalAmount__c),
    &quot;Guarantee approval threshold not set&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First-Level Approval Amount Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstLevelApprovalAmount__c</fullName>
        <formula>IF(!ISBLANK(Venue__r.Approver1__c) || !ISBLANK(Venue__r.Approver2__c),
  0,
  IF(DivisionFormula__c = &quot;US Concerts&quot;,
    Office__r.BUGuaranteeApprovalThreshold__c,
    IF(ISBLANK(Promoter__r.GuaranteeApprovalThreshold__c), 0, Promoter__r.GuaranteeApprovalThreshold__c)
  )
)


/* embedded formula for Office__r.BUGuaranteeApprovalThreshold__c
    IF(ISPICKVAL(Office__r.Type, &quot;Business Unit&quot;),
      Office__r.GuaranteeApprovalThreshold__c,
      IF(ISPICKVAL(Office__r.Parent.Type, &quot;Business Unit&quot;),
        Office__r.Parent.GuaranteeApprovalThreshold__c,
        null
      )
    )
*/</formula>
        <label>First-Level Approval Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FirstLevelApprover1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First-Level Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver1ForEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FirstLevelApprover2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First-Level Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver2ForEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FlagFinanceApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approval Flag: Guarantee &gt; $500k (or current threshold defined in LNE Flags Event Process Builder Flow) and routes to Finance through Approval Process</description>
        <label>Flag: Finance Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlagHighGuaranteeForRsvdNetGross__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Acknowledgement Flag: Guarantee &gt; 50% of Reserved Net Gross and Projected Paid Tix &lt; 10000 (or current thresholds defined in LNE Flags Event Process Builder Flow)</description>
        <label>Flag: High Guarantee for Rsvd Net Gross</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlagHighGuarantee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approval Flag: Guarantee &gt; $500k (or current threshold defined in LNE Flags Event Process Builder Flow)</description>
        <label>Flag: High Guarantee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlagHistoricalDataUnavailable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Acknowledgement Flag: No Previous Event in Market Found for Artist</description>
        <label>Flag: Historical Data Unavailable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlagIncreaseInArtistFees__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Acknowledgement Flag: Primary Artist Total Guarantee and Overhead &gt; Previous Event in Market Guarantees</description>
        <label>Flag: Increase in Artist Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlagLargerVenue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Acknowledgement Flag: Venue Capacity &gt; Previous Event in Market Capacity</description>
        <label>Flag: Larger Venue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlagOfferRequiresApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approval Flag: Guarantee &gt; BU-defined threshold</description>
        <label>Flag: Offer Requires Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlagPaidTarget__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Acknowledgement Flag: Project Paid Tickets &lt; Venue Target</description>
        <label>Flag: Paid &lt; Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlagPaidTicketsIncrease__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Acknowledgement Flag: Projected Paid Tickets &gt; Previous Event in Market Paid</description>
        <label>Flag: Paid Tickets Increase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlagShow7500PaidInAmpOrArena__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Acknowledgement Flag: Show &lt; 7500 Paid in Amp or Arena (or current threshold defined in LNE Flags Event Process Builder Flow)</description>
        <label>Flag: Show &lt; 7500 Paid in Amp or Arena</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlagTCHighGuarantee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Acknowledgement Flag: T/C Guarantee &gt; $75k (or current threshold defined in LNE Flags Event Process Builder Flow)</description>
        <label>Flag: T&amp;C High Guarantee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlashComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flash Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlashCompletedBy__c</fullName>
        <label>Flash Completed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlashIntegrationStatus__c</fullName>
        <label>Flash Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Integrated</fullName>
                </value>
                <value>
                    <fullName>Oracle Updated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GLCompanyName__c</fullName>
        <label>GL Company Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLCompanyName</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GLCompanyVenueType__c</fullName>
        <label>GL Company Venue Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>VenueType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GeographyByFormula__c</fullName>
        <formula>Office__r.Geography__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geography By Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>Drives sharing rules to provide read-only access to touring group members</description>
        <label>Geography</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrossLawnCapacity__c</fullName>
        <label>Gross Lawn Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GrossPotential__c</fullName>
        <label>Gross Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossReservedCapacity__c</fullName>
        <label>Gross Reserved Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HidePreviouslyForecastedLiftBfrTxs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hides the Previously Forecasted Lift Before Taxes field from the Ticket Revenue tab on Event.</description>
        <inlineHelpText>Hides the Previously Forecasted Lift Before Taxes field from the Ticket Revenue tab on Event.</inlineHelpText>
        <label>Hide Previously Forecasted Lift Bfr Txs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HidePreviouslyForecastedProjPdTkt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hides the Previously Forecasted Projected Paid Tickets field from the Ticket Revenue tab on Event.</description>
        <inlineHelpText>Hides the Previously Forecasted Projected Paid Tickets field from the Ticket Revenue tab on Event.</inlineHelpText>
        <label>Hide Previously Forecasted Proj Pd Tkt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntegrationStatus__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Integrated</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Reassign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LNEAPIID__c</fullName>
        <externalId>true</externalId>
        <label>LNE API ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LNEEventId__c</fullName>
        <displayFormat>EV-{00000}</displayFormat>
        <externalId>true</externalId>
        <label>LNE Event Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LawnComps__c</fullName>
        <label>Lawn Comps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LawnKills__c</fullName>
        <label>Lawn Kills</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LawnPaidAttendance__c</fullName>
        <label>Lawn Paid Attendance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>TEXT(Venue__r.Market__c)</formula>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MetricsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Metrics Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetricsCompletedBy__c</fullName>
        <label>Metrics Completed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetAncillaries__c</fullName>
        <label>Net Ancillaries</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetCapacity__c</fullName>
        <formula>NetManifestedReservedCapacity__c +  NetManifestedLawnCapacity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetGrossPotential__c</fullName>
        <label>Net Gross Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetManifestedLawnCapacity__c</fullName>
        <formula>GrossLawnCapacity__c -  LawnKills__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Manifested Lawn Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetManifestedReservedCapacity__c</fullName>
        <formula>GrossReservedCapacity__c -  ReservedKills__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Manifested Reserved Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetPotPotential__c</fullName>
        <label>Net Pot Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NoExpectedAncillaries__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Expected Ancillaries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfUpgrades__c</fullName>
        <label># of Upgrades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofTrucks__c</fullName>
        <label># of Trucks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfferNotes__c</fullName>
        <label>Offer Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Offer_Type__c</fullName>
        <description>if the event is part of a tour it is a tour offer type if not then it&apos;s local</description>
        <formula>IF(
ISBLANK(Tour__c ), &apos;Local&apos;, &apos;Tour&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficeNameFormula__c</fullName>
        <formula>Office__r.Name</formula>
        <label>Office Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficeName__c</fullName>
        <description>Drives sharing rules to provide edit access to other office members</description>
        <label>Office Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Office</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>OfficeEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OracleExportComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Oracle Export Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OracleExportCompletedBy__c</fullName>
        <label>Oracle Export Completed By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OracleProjectId__c</fullName>
        <description>Oracle Project Id. Reference to the project created in Oracle</description>
        <externalId>true</externalId>
        <label>Oracle Project Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleProjectName__c</fullName>
        <label>Oracle Project Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalFlashCaptured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>After the first flash integration is successful, the Current Flash amounts are copied to Original Flash on all the Ledger Entries and this checkbox prevents the action from triggering again.</description>
        <label>Original Flash Captured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Over5Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Over 5 Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OverrideGLAccountUnit__c</fullName>
        <description>Override the value of the GL Company Venue Type</description>
        <inlineHelpText>GL Company Unit XXXXX</inlineHelpText>
        <label>Override GL Account Unit</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLAfterPrimaryCoProsAtProjection__c</fullName>
        <label>P/L After Primary Co-Pros At Projection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLAfterPrimaryCoProsAtSellout__c</fullName>
        <label>P/L After Primary Co-Pros At Sellout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PaidAttendance__c</fullName>
        <formula>LawnPaidAttendance__c +  ReservedPaidAttendance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid Attendance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlatinumLift__c</fullName>
        <label>Platinum Lift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PotentialSplitPoint__c</fullName>
        <label>Potential Split Point</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PotentialToBeSharedAmount__c</fullName>
        <label>Potential To Be Shared Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrevioulsyForecastedLiftBeforeTaxes__c</fullName>
        <label>Previoulsy Forecasted Lift Before Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PreviousEventInMarket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Event in Market</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Subsequent Events in Market</relationshipLabel>
        <relationshipName>SubsequentEventsInMarket</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreviouslyForecastedGrossSales__c</fullName>
        <label>Previously Forecasted Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PreviouslyForecastedLiftBeforeFee__c</fullName>
        <label>Previously Forecasted Lift Before Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PreviouslyForecastedProjPaidTickets__c</fullName>
        <label>Previously Forecasted Proj Paid Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrimaryGuaranteesOverhead__c</fullName>
        <description>Primary artist&apos;s total guarantees and overhead</description>
        <label>Primary Guarantees &amp; Overhead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrimaryHeadlinerArtist__c</fullName>
        <description>Automatically populated via trigger on Deal and Event PB Flow</description>
        <label>Primary Headliner Artist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryVenueOffice__c</fullName>
        <description>Drives sharing rules to provide edit access to booking members of the venue&apos;s primary office</description>
        <label>Primary Venue Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectedAdjustedGross__c</fullName>
        <label>Projected Adjusted Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedArtistCosts__c</fullName>
        <label>Projected Artist Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedAverageTicketPrice__c</fullName>
        <label>Projected Average Ticket Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedContributionMargin__c</fullName>
        <label>Projected Contribution Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedDropCountPct__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Projected Drop Count %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>